--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,18 @@
 * {
   margin: 0;
-  padding: 0;
+  padding: 10px 20px;
   box-sizing: border-box;
+}
+
+.header {
+  background: rgb(2, 78, 2);
+  color: #fff;
+
+  width: 70vw;
+  margin: 0 auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
