--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+body {
+  background-image: url('https://images.unsplash.com/photo-1552796183-3ddba09e8a30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=936&q=80');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .header {
   background: rgb(2, 78, 2);
   color: #fff;
