--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  padding: 10px 20px;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -9,14 +9,19 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+
+  padding: 20px;
 }
 
 .header {
-  background: rgb(2, 78, 2);
+  border-radius: 6px;
+  box-shadow: 0px 0px 6px rgba(17, 17, 17, 0.7);
+  background: rgb(43, 58, 43);
   color: #fff;
 
   width: 70vw;
   margin: 0 auto;
+  padding: 20px;
 
   display: flex;
   flex-direction: column;
